--- a/app/src/main/res/layout/activity_shoppingcart.xml
+++ b/app/src/main/res/layout/activity_shoppingcart.xml
@@ -10,38 +10,39 @@
         android:id="@+id/imageView"
         android:layout_width="21dp"
         android:layout_height="21dp"
-        android:layout_marginStart="324dp"
+        android:layout_marginStart="312dp"
         android:src="@drawable/search"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/rvwShoppingCart"
         app:layout_constraintStart_toStartOf="parent"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.901" />
+        app:layout_constraintVertical_bias="0.692" />
 
     <ImageView
         android:id="@+id/imageView2"
         android:layout_width="25dp"
         android:layout_height="23dp"
         android:src="@drawable/shopping_cart"
-        app:layout_constraintBottom_toTopOf="@+id/textView"
+        app:layout_constraintBottom_toTopOf="@+id/rvwShoppingCart"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.341"
+        app:layout_constraintHorizontal_bias="0.283"
         app:layout_constraintStart_toEndOf="@+id/imageView"
         app:layout_constraintTop_toTopOf="parent"
-        app:layout_constraintVertical_bias="0.897" />
+        app:layout_constraintVertical_bias="0.686" />
 
     <TextView
         android:id="@+id/textView"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginBottom="16dp"
+        android:layout_marginBottom="32dp"
         android:text="Carrito de Frutas"
-        app:layout_constraintBottom_toTopOf="@+id/recyclerView2"
-        app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintHorizontal_bias="0.124"
+        android:textStyle="bold"
+        app:layout_constraintBottom_toTopOf="@+id/rvwShoppingCart"
+        app:layout_constraintEnd_toStartOf="@+id/imageView"
+        app:layout_constraintHorizontal_bias="0.175"
         app:layout_constraintStart_toStartOf="parent" />
 
     <androidx.recyclerview.widget.RecyclerView
-        android:id="@+id/recyclerView2"
+        android:id="@+id/rvwShoppingCart"
         android:layout_width="336dp"
         android:layout_height="288dp"
         android:layout_marginBottom="16dp"
@@ -67,6 +68,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="8dp"
         android:text="Subtotal"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView3"
         app:layout_constraintEnd_toStartOf="@+id/textView5"
         app:layout_constraintHorizontal_bias="0.116"
@@ -78,6 +80,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="12dp"
         android:text="Descuento"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView4"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.093"
@@ -89,6 +92,7 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="32dp"
         android:text="Delivery"
+        android:textStyle="bold"
         app:layout_constraintBottom_toTopOf="@+id/textView8"
         app:layout_constraintEnd_toStartOf="@+id/textView7"
         app:layout_constraintHorizontal_bias="0.115"
@@ -100,6 +104,8 @@
         android:layout_height="wrap_content"
         android:layout_marginBottom="172dp"
         android:text="Total"
+        android:textStyle="bold"
+        android:textColor="@color/purple_500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toStartOf="@+id/textView9"
         app:layout_constraintHorizontal_bias="0.118"
@@ -109,12 +115,13 @@
         android:id="@+id/textView5"
         android:layout_width="wrap_content"
         android:layout_height="wrap_content"
-        android:layout_marginTop="16dp"
-        android:layout_marginEnd="32dp"
+        android:layout_marginBottom="280dp"
         android:text="S/ 67.00"
         android:textStyle="bold"
+        app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
-        app:layout_constraintTop_toBottomOf="@+id/recyclerView2" />
+        app:layout_constraintHorizontal_bias="0.913"
+        app:layout_constraintStart_toStartOf="parent" />
 
     <TextView
         android:id="@+id/textView6"
@@ -147,6 +154,7 @@
         android:layout_marginBottom="172dp"
         android:text="S/ 75.00"
         android:textStyle="bold"
+        android:textColor="@color/purple_500"
         app:layout_constraintBottom_toBottomOf="parent"
         app:layout_constraintEnd_toEndOf="parent"
         app:layout_constraintHorizontal_bias="0.913"
